[package]
name = "zkdsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "9.1.2", optional = true }

[[bin]]
name = "zkdsl"
path = "src/bin/main.rs"
required-features = ["binaries"]

[features]
binaries = ["rustyline"]
